kubernetes/namespaces/http-server/http-server-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: http-server
  labels:
    namespace: http-server
