kubernetes/namespaces/http-server/http-server-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: http-server
  namespace: http-server
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: http-server
  type: ClusterIP
