kubernetes/namespaces/http-server/http-server-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server
  namespace: http-server
spec:
  ingressClassName: nginx
  rules:
    - host: decompiled.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  name: http
